--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
     "start": "nodemon ./web/basic-server.js",
     "start:es6": "babel-node ./web/basic-server.js",
+    "inspect": "node --inspect ./web/basic-server.js",
     "test": "mocha test",
     "test:es6": "mocha --compilers js:babel-register test",
     "lint": "eslint ./"
